// ========================
// ENUMS
// ========================

enum role_name {
  admin
  seller
  buyer
  driver
}

enum discount_type {
  fixed
  percent
}

enum delivery_method {
  instant
  next_day
  regular
}

enum order_status {
  sedang_dikemas
  menunggu_pengirim
  sedang_dikirim
  pesanan_selesai
  dikembalikan
}

enum delivery_status {
  available
  taken
  completed
}

enum wallet_transaction_type {
  topup
  payment
  refund
  earning
}

// ========================
// USER & AUTH
// ========================

Table users {
  id            bigint        [pk, increment, not null]
  username      varchar(100)  [unique, not null]
  email         varchar(150)  [unique, not null]
  password      varchar(255)  [not null]
  created_at    timestamp
  updated_at    timestamp
}

Table roles {
  id            bigint        [pk, increment, not null]
  name          role_name     [not null]
}

Table user_roles {
  id            bigint        [pk, increment, not null]
  user_id       bigint        [not null]
  role_id       bigint        [not null]
}

Table addresses {
  id            bigint        [pk, increment, not null]
  user_id       bigint        [not null]
  label         varchar(50)
  address       text          [not null]
  is_default    boolean       [default: false]
  created_at    timestamp
  updated_at    timestamp
}

// ========================
// STORE & PRODUCT
// ========================

Table stores {
  id            bigint        [pk, increment, not null]
  user_id       bigint        [not null]
  name          varchar(100)  [unique, not null]
  description   text
  image         varchar(255)
  created_at    timestamp
  updated_at    timestamp
}

Table products {
  id            bigint        [pk, increment, not null]
  store_id      bigint        [not null]
  name          varchar(150)  [not null]
  description   text
  price         decimal(15,2) [not null]
  stock         int           [default: 0]
  image         varchar(255)
  created_at    timestamp
  updated_at    timestamp
}

// ========================
// CART
// ========================

Table carts {
  id            bigint        [pk, increment, not null]
  user_id       bigint        [not null]
  store_id      bigint        [not null]
  created_at    timestamp
  updated_at    timestamp
}

Table cart_items {
  id            bigint        [pk, increment, not null]
  cart_id       bigint        [not null]
  product_id    bigint        [not null]
  quantity      int           [not null, default: 1]
}

// ========================
// DISCOUNT
// ========================

Table vouchers {
  id            bigint        [pk, increment, not null]
  code          varchar(50)   [unique, not null]
  type          discount_type [not null]
  value         decimal(15,2) [not null]
  expired_at    timestamp     [not null]
  max_usage     int           [not null]
  used_count    int           [default: 0]
  created_at    timestamp
}

Table promos {
  id            bigint        [pk, increment, not null]
  code          varchar(50)   [unique, not null]
  type          discount_type [not null]
  value         decimal(15,2) [not null]
  expired_at    timestamp     [not null]
  created_at    timestamp
}

// ========================
// ORDER
// ========================

Table orders {
  id                bigint          [pk, increment, not null]
  buyer_id          bigint          [not null]
  store_id          bigint          [not null]
  address_id        bigint          [not null]
  voucher_id        bigint
  promo_id          bigint
  delivery_method   delivery_method [not null]
  subtotal          decimal(15,2)   [not null]
  discount_amount   decimal(15,2)   [default: 0]
  delivery_fee      decimal(15,2)   [not null]
  ppn               decimal(15,2)   [not null]
  total             decimal(15,2)   [not null]
  status            order_status    [not null, default: 'sedang_dikemas']
  created_at        timestamp
  updated_at        timestamp
}

Table order_items {
  id              bigint        [pk, increment, not null]
  order_id        bigint        [not null]
  product_id      bigint        [not null]
  product_name    varchar(150)  [not null]
  product_price   decimal(15,2) [not null]
  quantity        int           [not null]
  subtotal        decimal(15,2) [not null]
}

Table order_status_histories {
  id          bigint        [pk, increment, not null]
  order_id    bigint        [not null]
  status      order_status  [not null]
  note        text
  created_at  timestamp
}

// ========================
// WALLET
// ========================

Table wallets {
  id          bigint        [pk, increment, not null]
  user_id     bigint        [unique, not null]
  balance     decimal(15,2) [default: 0]
  updated_at  timestamp
}

Table wallet_transactions {
  id            bigint                    [pk, increment, not null]
  wallet_id     bigint                    [not null]
  type          wallet_transaction_type   [not null]
  amount        decimal(15,2)             [not null]
  description   varchar(255)
  created_at    timestamp
}

// ========================
// DELIVERY
// ========================

Table deliveries {
  id            bigint          [pk, increment, not null]
  order_id      bigint          [unique, not null]
  driver_id     bigint
  status        delivery_status [not null, default: 'available']
  taken_at      timestamp
  completed_at  timestamp
  due_at        timestamp       [not null]
  created_at    timestamp
}

// ========================
// PUBLIC REVIEW
// ========================

Table app_reviews {
  id            bigint        [pk, increment, not null]
  reviewer_name varchar(100)  [not null]
  rating        tinyint       [not null]
  comment       text          [not null]
  created_at    timestamp
}

// ========================
// RELATIONS
// ========================

// User & Auth
Ref: user_roles.user_id > users.id [delete: cascade]
Ref: user_roles.role_id > roles.id [delete: cascade]
Ref: addresses.user_id > users.id [delete: cascade]

// Store & Product
Ref: stores.user_id > users.id [delete: cascade]
Ref: products.store_id > stores.id [delete: cascade]

// Cart
Ref: carts.user_id > users.id [delete: cascade]
Ref: carts.store_id > stores.id [delete: cascade]
Ref: cart_items.cart_id > carts.id [delete: cascade]
Ref: cart_items.product_id > products.id [delete: cascade]

// Order
Ref: orders.buyer_id > users.id [delete: cascade]
Ref: orders.store_id > stores.id [delete: cascade]
Ref: orders.address_id > addresses.id [delete: no action]
Ref: orders.voucher_id > vouchers.id [delete: no action]
Ref: orders.promo_id > promos.id [delete: no action]
Ref: order_items.order_id > orders.id [delete: cascade]
Ref: order_items.product_id > products.id [delete: no action]
Ref: order_status_histories.order_id > orders.id [delete: cascade]

// Wallet
Ref: wallets.user_id > users.id [delete: cascade]
Ref: wallet_transactions.wallet_id > wallets.id [delete: cascade]

// Delivery
Ref: deliveries.order_id > orders.id [delete: cascade]
Ref: deliveries.driver_id > users.id [delete: no action]
